--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "@truffle/hdwallet-provider": "^2.0.8",
-    "dotenv": "^16.0.1"
+    "dotenv": "^16.0.1",
+    "reactive-button": "^1.3.12"
   }
 }
